--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
 :root {
-  --title-color       : #363f5f;
-  --total-card-color  : #49AA26;
-  --secondary-color   : #fff;
-  --income-text-color : #12a454;
-  --expense-text-color: #e92929;
+  --title-color            : #363f5f;
+  --green                  : #46b31e;
+  --light-green            : #3dd705;
+  --secondary-color        : #ffffff;
+  --income-text-color      : #12a454;
+  --expense-text-color     : #e92929;
+  --danger-color           : #e92929;
+  --background-header-color: #1f6605;
+  --background-color       : #f0f2f5;
+  --border-radius-value    : 0.5rem;
+  --font-size-percent      : 93.75%;
+  /* 15px */
 }
 
 * {
@@ -12,9 +19,25 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: var(--font-size-percent);
+}
+
 body {
-  background : #f0f2f5;
+  background : var(--background-color);
   font-family: 'Poppins', sans-serif;
+}
+
+.sr-only {
+  position    : absolute;
+  width       : 1px;
+  height      : 1px;
+  padding     : 0;
+  margin      : -1px;
+  overflow    : hidden;
+  clip        : rect(0, 0, 0, 0);
+  white-space : nowrap;
+  border-width: 0;
 }
 
 .container {
@@ -30,10 +53,29 @@ h2 {
   font-weight  : 400;
 }
 
+/* Links & Buttons ############### */
+button {
+  color      : var(--green);
+  background : none;
+  border     : 0;
+  cursor     : pointer;
+  font-size  : 1rem;
+  line-height: 2rem;
+
+}
+
+button:hover {
+  color: var(--light-green);
+}
+
+.button.new {
+  margin-bottom: .8rem;
+}
+
 /*  Header ####################### */
 header {
-  background: #2d4a22;
-  padding   : 2rem 0 10rem;
+  background: var(--background-header-color);
+  padding   : 2rem 0 12rem;
   text-align: center;
 }
 
@@ -44,7 +86,7 @@ header {
 
 /*  Balance ####################### */
 #balance {
-  margin-top: -8rem;
+  margin-top: -7rem;
 }
 
 #balance h2 {
@@ -56,14 +98,17 @@ header {
 .card {
   background   : var(--secondary-color);
   padding      : 1.5rem 2rem;
-  border-radius: .25rem;
+  border-radius: var(--border-radius-value);
   margin-bottom: 2rem;
   color        : var(--title-color);
 }
 
 .card h3 {
-  font-weight: 400;
-  font-size  : 1rem;
+  font-weight    : 400;
+  font-size      : 1rem;
+  display        : flex;
+  align-items    : center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -71,14 +116,21 @@ header {
   font-size  : 200;
   line-height: 3rem;
   margin-top : 1rem;
+  white-space: nowrap;
 }
 
 .card.total {
-  background: var(--total-card-color);
+  background: var(--green);
   color     : var(--secondary-color);
 }
 
 /* Table   ####################### */
+#transactions {
+  display   : block;
+  width     : 100%;
+  overflow-x: auto;
+}
+
 #data-table {
   width         : 100%;
   border-spacing: 0 0.5rem;
@@ -88,7 +140,12 @@ header {
 
 table thead tr th:first-child,
 table tbody tr td:first-child {
-  border-radius: 0.25rem 0 0 0.25rem;
+  border-radius: var(--border-radius-value) 0 0 var(--border-radius-value);
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+  border-radius: 0 var(--border-radius-value) var(--border-radius-value) 0;
 }
 
 table thead th {
@@ -124,10 +181,130 @@ td.expense {
   color: var(--expense-text-color)
 }
 
+/*  Modal  ####################### */
+.modal-overlay {
+  height: 100%;
+  width : 100%;
+
+  background: rgba(0, 0, 0, .7);
+
+  position: fixed;
+  top     : 0;
+
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+
+  opacity   : 0;
+  visibility: hidden;
+  transition: opacity .5s;
+}
+
+.modal-overlay.active {
+  opacity   : 1;
+  visibility: visible;
+  transition: opacity .5s;
+}
+
+.modal {
+  padding   : 2.4rem;
+  position  : relative;
+  width     : 90%;
+  max-width : 600px;
+  background: var(--background-color);
+}
+
+/* Form  ###################### */
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+input {
+  border       : none;
+  border-radius: 0.25rem;
+  width        : 100%;
+  padding      : 0.8rem;
+}
+
+.input-group {
+  margin-top: .8rem;
+}
+
+.input-group small.help {
+  opacity: .4;
+}
+
+form input::placeholder {
+  color: var(--title-color);
+}
+
+.input-group.actions {
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+}
+
+.input-group.actions button {
+  padding      : 0;
+  height       : 50px;
+  border-radius: .25rem;
+  width        : 48%;
+}
+
+.input-group.actions button.cancel {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  background     : transparent;
+  border         : 2px solid var(--danger-color);
+  color          : var(--danger-color);
+  opacity        : .6;
+  transition     : button .2s;
+}
+
+.input-group.actions button.cancel:hover {
+  opacity: 1;
+}
+
+
+.input-group.actions button.save {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  color          : var(--secondary-color);
+  border         : 2px solid var(--green);
+  font-weight    : 500;
+  transition     : background 0.2s;
+  color        : var(--secondary-color);
+  background   : var(--green);
+
+}
+
+.input-group.actions button.save:hover {
+  background-color: var(--light-green);
+}
+
 /*  Footer ####################### */
 footer {
   text-align: center;
   padding   : 4rem 0 2rem;
   color     : var(--title-color);
   opacity   : 0.6;
+}
+
+/* Responsive ################ */
+@media (min-width: 800px) {
+  :root {
+    --font-size-percent: 87.5%;
+  }
+
+  #balance {
+    display              : grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap                  : 1rem;
+  }
 }
